<resources>
    <string name="app_name">Antl</string>

    <string name="antl_button_register">Register</string>
    <string name="antl_button_login">Login</string>
    <string name="antl_button_cancel">Cancel</string>
    <string name="antl_hint_password">Password</string>
    <string name="antl_hint_username">Username</string>
    <string name="antl_hint_email">Email</string>

    <string name="event_overview_event_description">Event Image</string>
    <string name="event_overview_event_name">Epic Berlin Trip</string>
    <string name="event_overview_event_location">AlexanderPlatz</string>
    <string name="event_overview_attending_user_icon_description">Attending user Icon</string>
    <string name="event_overview_attending_users">13</string>
    <string name="event_overview_day">26</string>
    <string name="event_overview_month">DEC</string>
    <string name="Events">Events fragment</string>
    <string name="friend_overview_friend_name">Friend</string>
    <string name="antl_button_next">next</string>

    <string name="create_event_name">What is the name of the mEvent?</string>
    <string name="create_event_name_hint">Enter mEvent here</string>
    <string name="create_event_description">What is the mEvent about?</string>
    <string name="create_event_description_hint">Enter description here</string>
    <string name="create_event_date">Add dates to mEvent here</string>
    <string name="create_event_multiple_dates">Do you want to add extra date options to the mEvent?</string>
    <string name="create_event_next_button">Next</string>

    <string name="add_date_to_event_hint">Add a date to the mEvent here</string>
    <string name="add_date_to_event"><u>Add dates to the mEvent:</u></string>
    <string name="button_to_add_a_date_to_the_event">Button to add a date to the mEvent</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="create_event_previous_button_desc">Go to previous page of create mEvent</string>
    <string name="eventsMenu">events</string>
    <string name="friendsMenu">friends</string>
    <string name="profileMenu">profile</string>
    <string name="antl">Antl.</string>
    <string name="save">save</string>
    <string name="button_to_remove_a_date_to_the_event">button to remove a date to the mEvent</string>
    <string name="click_the_button_to_add_a_date">Add a date</string>
    <string name="insert_a_date">Insert A Date</string>
    <string name="logout">Logout</string>
    <string name="friend_code_input_label">Please enter friend code</string>
    <string name="friendcode">FriendCode</string>
    <string name="your_friend_code_label">Your friend code:</string>

    <string name="error_code_login">Unable to login, please try again</string>
</resources>
