<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group">
        <item
            android:id="@+id/destination_events"
            android:icon="@drawable/ic_calendar_day"
            android:title="@string/eventsMenu"
            android:visible="true" />
        <item
            android:id="@+id/destination_friends"
            android:title="@string/friendsMenu"
            android:icon="@drawable/ic_users"/>
        <item
            android:id="@+id/destination_profile"
            android:title="@string/profileMenu"
            android:icon="@drawable/ic_user"/>
    </group>
</menu>